entity_macros/tests/ui/attribute/core-field-database-already-marked.stderr
error: Cannot mark a database field if including ent core
 --> $DIR/core-field-database-already-marked.rs:6:5
  |
6 |     #[ent(database)]
  |     ^

warning: unused import: `Database`
 --> $DIR/core-field-database-already-marked.rs:1:32
  |
1 | use entity::{include_ent_core, Database, Ent};
  |                                ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
